a right div with border radius on the left side is commited

--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
     <label for="radioz" id="radio">
         <input type="radio" name="gender" id="female"> Female
     </div>
+    <div class="main">
+        <h3>Why no worries !</h3>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus doloribus accusamus autem, asperiores vel quia eius vero corrupti ducimus velit, dolorem inventore maiores quae harum? Ipsam voluptate ullam earum tenetur.</p>
+    </div>
 </body>
 </html>
